--- a/project/counts/templates/counts/includes/chart_calendar.html
+++ b/project/counts/templates/counts/includes/chart_calendar.html
@@ -56,7 +56,7 @@ Highcharts.chart('clander_{{ id }}_container', {
 
     yAxis: {
     		type: 'category',
-        categories: ['P', 'A', 'T', 'K', 'P', 'Š', 'S'],
+        categories: {{ first_weekday_letter|safe|title }},
         title: null,
         reversed: true,
         lineWidth: 0,
@@ -111,8 +111,8 @@ Highcharts.chart('clander_{{ id }}_container', {
         var s = this.point.date;
         if(this.point.value >= 0.1)
         {
-        	s += '<div class="gap">Tarpas '+this.point.gap+'d.</div>';
-        	s += '<div class="qty">Kiek '+this.point.qty+'</div>';
+        	s += '<div class="gap">{{ gap }} '+this.point.gap+'d.</div>';
+        	s += '<div class="qty">{{ quantity }} '+this.point.qty+'</div>';
         }
         return s;
       }
