--- a/project/drinks/templates/drinks/includes/chart_consumsion_history.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_history.html
@@ -28,18 +28,18 @@
             gridLineWidth: 1,
             tickmarkPlacement: 'on',
             categories: [
-                'Sausis',
-                'Vasaris',
-                'Kovas',
-                'Balandis',
-                'Gegužė',
-                'Birželis',
-                'Liepa',
-                'Rugpjūtis',
-                'Rugsėjis',
-                'Spalis',
-                'Lapkritis',
-                'Gruodis'
+                '{{ January|title }}',
+                '{{ February|title }}',
+                '{{ March|title }}',
+                '{{ April|title }}',
+                '{{ May|title }}',
+                '{{ June|title }}',
+                '{{ July|title }}',
+                '{{ August|title }}',
+                '{{ September|title }}',
+                '{{ October|title }}',
+                '{{ November|title }}',
+                '{{ December|title }}'
             ],
             labels: {
                 style: {
