--- a/project/drinks/templates/drinks/includes/drinks_target_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_form.html
@@ -1,2 +1,3 @@
 {% load form %}
-{% generic_form title='Tikslas metams' update_container='drinks-target-content' %}
+{% load i18n %}
+{% generic_form title=_('Goal for the year') update_container='drinks-target-content' %}
