--- a/project/drinks/templates/drinks/includes/drinks_delete_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_delete_form.html
@@ -1,2 +1,3 @@
 {% load form %}
-{% generic_delete_form title='Gėrimų trinimas' update_container='ajax-content' %}
+{% load i18n %}
+{% generic_delete_form title=_('Delete drinks') update_container='ajax-content' %}
