--- a/project/drinks/templates/drinks/includes/drinks_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_form.html
@@ -1,5 +1,7 @@
 {% load form %}
-{% generic_form title='Gėrimai' update_container='ajax-content' %}
+{% load i18n %}
+
+{% generic_form title=_('Drinks') update_container='ajax-content' %}
 
 <script>
     $(document).ready(function () {
