--- a/project/drinks/templates/drinks/includes/tbl_alcohol.html
+++ b/project/drinks/templates/drinks/includes/tbl_alcohol.html
@@ -1,8 +1,10 @@
+{% load i18n %}
+
 <table class="table table-hover stats">
     <thead class="thead-light">
         <tr class="top-text"><th>C<sub>2</sub>H<sub>5</sub>OH</th></tr>
         <tr class="top">
-            <th class="text-end">Litrai</th>
+            <th class="text-end">{% translate 'Litres' %}</th>
         </tr>
     </thead>
     <tfoot>
