--- a/project/drinks/templates/drinks/includes/tbl_last_day.html
+++ b/project/drinks/templates/drinks/includes/tbl_last_day.html
@@ -1,14 +1,16 @@
+{% load i18n %}
+
 <table class="table table-hover stats">
     <thead class="thead-light">
-        <tr class="top-text"><th colspan="2">Paskutinį sykį gerta</th></tr>
+        <tr class="top-text"><th colspan="2">{% translate 'Last time I had a drink' %}</th></tr>
         <tr class="top">
             <th>Data</th>
-            <th class="text-end">Dienų skaičius</th>
+            <th class="text-end">{% translate 'Number of days' %}</th>
         </tr>
     </thead>
     <tfoot>
         <tr>
-            <td class="text-start">{% if date %}{{ date|date:"Y-m-d" }}{% else %}Nėra duomenų{% endif %}</td>
+            <td class="text-start">{% if date %}{{ date|date:"Y-m-d" }}{% else %}{% translate 'No data' %}{% endif %}</td>
             <td>{{ delta }}</td>
         </tr>
     </tfoot>
