--- a/project/drinks/templates/drinks/includes/tbl_std_av.html
+++ b/project/drinks/templates/drinks/includes/tbl_std_av.html
@@ -1,13 +1,15 @@
 {% load table_cell %}
+{% load i18n %}
+
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <tr class="top-text"><th colspan="5">Vidutiniškai suvartojamas Std AV</th></tr>
+        <tr class="top-text"><th colspan="5">{% translate 'Average Std Av consumption' %}</th></tr>
         <tr class="top">
             <th></th>
-            <th class="text-end">Viso</th>
-            <th class="text-end">Per dieną</th>
-            <th class="text-end">Per savaitę</th>
-            <th class="text-end">Per mėnesį</th>
+            <th class="text-end">{% translate 'Total' %}</th>
+            <th class="text-end">{% translate 'Per day' %}</th>
+            <th class="text-end">{% translate 'Per week' %}</th>
+            <th class="text-end">{% translate 'Per month' %}</th>
         </tr>
     </thead>
     <tbody>
@@ -20,7 +22,7 @@
             {% cell item.per_month %}
         </tr>
         {% empty %}
-        <tr><td colspan="5">Nėra duomenų</td></tr>
+        <tr><td colspan="5">{% translate 'No data' %}</td></tr>
         {% endfor %}
     </tbody>
 </table>
