--- a/project/drinks/templates/drinks/includes/chart_summary.html
+++ b/project/drinks/templates/drinks/includes/chart_summary.html
@@ -1,4 +1,4 @@
-<div id="chart_history_container"></div>
+<div id="chart_summary_container"></div>
 <script>
     Highcharts.setOptions({
         lang: {
@@ -6,7 +6,7 @@
             decimalPoint: ',',
         }
     });
-    Highcharts.chart('chart_history_container', {
+    Highcharts.chart('chart_summary_container', {
         chart: {
             marginBottom: 67,
         },
