--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -1,31 +1,32 @@
 {% load cell_format %}
+{% load i18n %}
 
 <table class="table table-hover stats">
     <thead class="thead-light">
         <tr class="top">
             <th></th>
-            <th class="text-end">Planas</th>
-            <th class="text-end">Faktas</th>
+            <th class="text-end">{% translate 'Plan' %}</th>
+            <th class="text-end">{% translate 'Fact' %}</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Pajamos</td>
+            <td>{% translate 'Incomes' %}</td>
             <td>{{ plan_incomes|floatformat:2 }}</td>
             <td class="{{ fact_incomes|compare:plan_incomes }}">{{ fact_incomes|floatformat:2 }}</td>
         </tr>
         <tr>
-            <td>Išlaidos</td>
+            <td>{% translate 'Expenses' %}</td>
             <td>{{ plan_expenses|floatformat:2 }}</td>
             <td class="{{ plan_expenses|compare:fact_expenses }}">{{ fact_expenses|floatformat:2 }}</td>
         </tr>
         <tr>
-            <td>Pinigai dienai</td>
+            <td>{% translate 'Money for a day' %}</td>
             <td>{{ plan_per_day|floatformat:2 }}</td>
             <td class="{{ plan_per_day|compare:fact_per_day }}">{{ fact_per_day|floatformat:2 }}</td>
         </tr>
         <tr>
-            <td>Mėn balansas</td>
+            <td>{% translate 'Balance' %}</td>
             <td>{{ plan_remains|floatformat:2 }}</td>
             <td class="{{ fact_remains|compare:plan_remains }}">{{ fact_remains|floatformat:2 }}</td>
         </tr>
