--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
@@ -105,16 +106,16 @@
     </div>
     <div class="col-lg-4 my-sm-2 my-lg-0 gx-2 text-end">
         {% url 'expenses:expenses_new' as url_expenses_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"> <i class="bi bi-plus"></i>Išlaidos</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"> <i class="bi bi-plus"></i>{% translate 'Expenses' %}</button>
         {% url 'incomes:incomes_new' as url_incomes_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"> <i class="bi bi-plus"></i>Pajamos</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"> <i class="bi bi-plus"></i>{% translate 'Incomes' %}</button>
         {% url 'savings:savings_new' as url_savings_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_new }}"> <i class="bi bi-plus"></i>Taupymas</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_new }}"> <i class="bi bi-plus"></i>{% translate 'Savings' %}</button>
         {% url 'transactions:transactions_new' as url_transactions_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions_new }}"> <i class="bi bi-plus"></i>Pervedimas</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_transactions_new }}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
         {% url 'drinks:drinks_new' as url_drinks_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_new }}"><i class="bi bi-plus"></i>Gertynės</button>
-        <button class="btn btn-sm btn-info" onclick="myFunction()">Rodyti kitą grafiką</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_new }}"><i class="bi bi-plus"></i>{% translate 'Drinks' context 'drinks button' %}</button>
+        <button class="btn btn-sm btn-info" onclick="myFunction()">{% translate 'Show other chart' %}</button>
     </div>
 </div>
 
