--- a/project/debts/templates/debts/includes/borrows_form.html
+++ b/project/debts/templates/debts/includes/borrows_form.html
@@ -1,4 +1,7 @@
-{% load form %}{% load static %}
-{% generic_form title='Skolinu' update_container='borrow_ajax' %}
+{% load form %}
+{% load static %}
+{% load i18n %}
+
+{% generic_form title=_('Borrow') update_container='borrow_ajax' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
