--- a/project/debts/templates/debts/includes/borrows_list.html
+++ b/project/debts/templates/debts/includes/borrows_list.html
@@ -1,16 +1,17 @@
 {% load humanize %}
+{% load i18n %}
 
 {% if items %}
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>Data</th>
-            <th>Skolininkas</th>
-            <th>Paskolinta</th>
-            <th>Gražinta</th>
-            <th>Sąskaita</th>
-            <th>Pastaba</th>
-            <th class="text-center">Uždaryta</th>
+            <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Borrower' %}</th>
+            <th>{% translate 'Sum' %}</th>
+            <th>{% translate 'Returned' %}</th>
+            <th>{% translate 'Account' %}</th>
+            <th>{% translate 'Remark' %}</th>
+            <th class="text-center">{% translate 'Closed' %}</th>
             <th colspan="2"></th>
         </tr>
     </thead>
@@ -27,12 +28,12 @@
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
             <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}" data-target="borrow" class=" js-create set-target edit" title="Edit">
+                <a role="button" data-url="{{ url_update }}" data-target="borrow" class=" js-create set-target edit" title="{% translate 'Edit' %}">
                     <i class="bi bi-pencil-fill"></i>
                 </a>
             </td>
             <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" data-target="borrow" class="js-delete set-target trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                <a role="button" data-url="{{ url_delete }}" data-target="borrow" class="js-delete set-target trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
         {% endfor %}
@@ -42,7 +43,7 @@
 {% else %}
 
 <div class="mx-auto text-center alert alert-warning py-2">
-    <b>{{ request.user.year|title }}</b> metais įrašų nėra.
+    {% blocktranslate with year=request.user.year|title %}No records in <b>{{ year }}</b>.{% endblocktranslate %}
 </div>
 
 {% endif %}
