--- a/project/debts/templates/debts/includes/lents_form.html
+++ b/project/debts/templates/debts/includes/lents_form.html
@@ -1,4 +1,7 @@
-{% load form %}{% load static %}
-{% generic_form title='Pasiskolinu' update_container='lent_ajax' %}
+{% load form %}
+{% load static %}
+{% load i18n %}
+
+{% generic_form title=_('Lent') update_container='lent_ajax' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
