forgotten translate templates

--- a/project/savings/templates/savings/includes/savings_list.html
+++ b/project/savings/templates/savings/includes/savings_list.html
@@ -40,6 +40,6 @@
 
 {% else %}
 <div class="mx-auto text-center alert alert-warning py-2 mb-4">
-    <b>{{ request.user.year|title }}</b> metais įrašų nėra.
+    {% blocktranslate with year=request.user.year|title %}No records in <b>{{ year }}</b>.{% endblocktranslate %}
 </div>
 {% endif %}
