--- a/project/plans/templates/plans/includes/incomes_plan_delete_form.html
+++ b/project/plans/templates/plans/includes/incomes_plan_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Pajamų planų trynimas' update_container='incomes_list' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete plans') update_container='incomes_list' %}
