--- a/project/plans/templates/plans/includes/savings_plan_delete_form.html
+++ b/project/plans/templates/plans/includes/savings_plan_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Taupymo planų trynimas' update_container='savings_list' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete plans') update_container='savings_list' %}
