--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -1,4 +1,6 @@
-{% load static %}{% load crispy_forms_tags %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% load i18n %}
 
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1">
     {% csrf_token %}
@@ -7,7 +9,7 @@
     <script src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
     </div>
     <div class="modal-body">
         {% include 'core/includes/form_errors.html' %}
