--- a/project/plans/templates/plans/includes/expenses_plan_form.html
+++ b/project/plans/templates/plans/includes/expenses_plan_form.html
@@ -1,3 +1,5 @@
 {% load form %}
-{% generic_form title='Išlaidų planas' update_container='expenses_list' chained_dropdown='plans_stats' %}
+{% load i18n %}
+
+{% generic_form title=_('Expenses plans') update_container='expenses_list' chained_dropdown='plans_stats' %}
 
