--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -1,20 +1,13 @@
-{% load get_item %}{% load define_action %}{% load table_cell %}
+{% load get_item %}
+{% load define_action %}
+{% load table_cell %}
+{% load i18n %}
+
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>Pavadinimas</th>
-            <th class="w7p text-end">Sausis</th>
-            <th class="w7p text-end">Vasaris</th>
-            <th class="w7p text-end">Kovas</th>
-            <th class="w7p text-end">Balandis</th>
-            <th class="w7p text-end">Gegužė</th>
-            <th class="w7p text-end">Birželis</th>
-            <th class="w7p text-end">Liepa</th>
-            <th class="w7p text-end">Rugpjūtis</th>
-            <th class="w7p text-end">Rugsėjis</th>
-            <th class="w7p text-end">Spalis</th>
-            <th class="w7p text-end">Lapkritis</th>
-            <th class="w7p text-end">Gruodis</th>
+            <th>{% translate 'Title' %}</th>
+            {% for month in months %}<th class="w7p text-end">{{ month }}</th>{% endfor %}
             <th colspan="2"></th>
         </tr>
     </thead>
@@ -22,8 +15,8 @@
         {% for item in items %}
         {% if url_update %}{% url url_update item.id as url %}{% else %}{% define '' as url %}{% endif %}
         {% with item|get_obj_attr:type as name %}
-        <tr data-url="{{ url }}" class="dblclick{% if name == 'Likutis' %} bg-warning{% endif %}">
-            <td class="text-start">{{ name }}{% if item.expense_type.necessary or item.saving_type or 'Būtin' in name or item.title %} <i class="bi bi-star plans-star"></i>{% endif %}</td>
+        <tr data-url="{{ url }}" class="dblclick{% if name == _('Residual') %} bg-warning{% endif %}">
+            <td class="text-start">{{ name }}{% if item.expense_type.necessary or item.saving_type or item.title %} <i class="bi bi-star plans-star"></i>{% endif %}</td>
             {% cell item.january %}
             {% cell item.february %}
             {% cell item.march %}
@@ -38,18 +31,19 @@
             {% cell item.december %}
             <td class="w-edit">
             {% if url_delete %}
-                <a role="button" data-url="{{ url }}" class="js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+                <a role="button" data-url="{{ url }}" class="js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
             {% endif %}
             </td>
             <td class="w-delete">
             {% if url_delete %}
-                <a role="button" class="js-delete trash" data-url="{% url url_delete item.id %}" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                <a role="button" class="js-delete trash" data-url="{% url url_delete item.id %}" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
             {% endif %}
             </td>
         </tr>{% endwith %}
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="13" class="py-2"><b>{{ year|title }}</b> metais įrašų nėra.</td>
+            <td colspan="13" class="py-2">
+                {% blocktranslate with year=year|title %}No records in <b>{{ year }}</b>.{% endblocktranslate %}
             <td></td>
         </tr>
         {% endfor %}
