--- a/project/plans/templates/plans/includes/incomes_plan_form.html
+++ b/project/plans/templates/plans/includes/incomes_plan_form.html
@@ -1,3 +1,5 @@
 {% load form %}
-{% generic_form title='Pajamų planas' update_container='incomes_list' chained_dropdown='plans_stats' %}
+{% load i18n %}
+
+{% generic_form title=_('Incomes plans') update_container='incomes_list' chained_dropdown='plans_stats' %}
 
