--- a/project/plans/templates/plans/includes/savings_plan_form.html
+++ b/project/plans/templates/plans/includes/savings_plan_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_form title='Taupymo planas' update_container='savings_list' chained_dropdown='plans_stats' %}
+{% load i18n %}
+
+{% generic_form title=_('Savings plans') update_container='savings_list' chained_dropdown='plans_stats' %}
