--- a/project/plans/templates/plans/index.html
+++ b/project/plans/templates/plans/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
 
 {% block head %}
 
@@ -25,12 +26,12 @@
         <!-- incomes plans -->
         <div class="row my-2">
             <div class="col">
-                <h6>Pajamų planas</h6>
+                <h6>{% translate 'Incomes' %}</h6>
             </div>
             <div class="col-3 text-end">
                 {% url 'plans:incomes_plan_new' as url_incomes_new %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> Kopijuoti planus</button>
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{% url 'plans:copy_plans' %}"><i class="bi bi-stickies"></i> {% translate 'Copy plans' %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_incomes_new }}"><i class="bi bi-plus"></i>{% translate "Record" context "record button" %}</button>
             </div>
         </div>
         <div class="row">
@@ -39,10 +40,10 @@
 
         <!-- expenses plans -->
         <div class="row my-2">
-            <div class="col"><h6>Išlaidų planas</h6></div>
+            <div class="col"><h6>{% translate 'Expenses' %}</h6></div>
             <div class="col-3 text-end">
                 {% url 'plans:expenses_plan_new' as url_expenses_new %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expenses_new }}"><i class="bi bi-plus"></i>{% translate "Record" context "record button" %}</button>
             </div>
         </div>
         <div class="row">
@@ -51,10 +52,10 @@
 
         <!-- necessary expenses plans -->
         <div class="row my-2">
-            <div class="col"><h6>Papildomų būtinų išlaidų planas</h6></div>
+            <div class="col"><h6>{% translate 'Additional necessary expenses' %}</h6></div>
             <div class="col-3 text-end">
                 {% url 'plans:necessarys_plan_new' as url_necessary_new %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_necessary_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_necessary_new }}"><i class="bi bi-plus"></i>{% translate "Record" context "record button" %}</button>
             </div>
         </div>
         <div class="row">
@@ -64,11 +65,11 @@
         <!-- savings plans -->
         <div class="row my-2">
             <div class="col">
-                <h6>Taupymo planas</h6>
+                <h6>{% translate 'Savings' %}</h6>
             </div>
             <div class="col-3 text-end">
                 {% url 'plans:savings_plan_new' as url_savings_new %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings_new }}"><i class="bi bi-plus"></i>{% translate "Record" context "record button" %}</button>
             </div>
         </div>
         <div class="row">
@@ -78,11 +79,11 @@
         <!-- day plans -->
         <div class="row my-2">
             <div class="col">
-                <h6>Suma dienai</h6>
+                <h6>{% translate 'Sum per day' %}</h6>
             </div>
             <div class="col-3 text-end">
                 {% url 'plans:days_plan_new' as url_day_new %}
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_day_new }}"><i class="bi bi-plus"></i>Įrašą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_day_new }}"><i class="bi bi-plus"></i>{% translate "Record" context "record button" %}</button>
             </div>
         </div>
         <div class="row">
@@ -91,7 +92,7 @@
 
         <!-- stats plans -->
         <div class="row my-2">
-            <div class="col"><h6>Skaičiavimai</h6></div>
+            <div class="col"><h6>{% translate 'Calculations' %}</h6></div>
             <div class="col-3 text-end"></div>
         </div>
         <div class="row">
