--- a/project/counts/templates/counts/includes/counts_delete_form.html
+++ b/project/counts/templates/counts/includes/counts_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Trinimas' update_container='ajax-content' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete counter') update_container='ajax-content' %}
