--- a/project/counts/templates/counts/includes/counts_form.html
+++ b/project/counts/templates/counts/includes/counts_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_form title='Naktys' update_container='ajax-content' %}
+{% load i18n %}
+
+{% generic_form title=_('Counter') update_container='ajax-content' %}
