--- a/project/counts/templates/counts/includes/info_row.html
+++ b/project/counts/templates/counts/includes/info_row.html
@@ -1,6 +1,8 @@
+{% load i18n %}
+
 <div class="info_row">
-    <span>Kiek:</span> <h6 class="me-3">{{ total|floatformat:0 }}</h6>
-    <span>Savaitė:</span> <h6 class="me-3">{{ week|floatformat:0 }}</h6>
-    <span>Per savaitę:</span> <h6>{{ ratio|floatformat:1 }}</h6>
-    {% if current_gap %}<span class="ms-3">Paskutinį sykį prieš:</span> <h6>{{ current_gap|floatformat:0 }}</h6><span>d.</span>{% endif %}
+    <span>{% translate 'Quantity' %}:</span> <h6 class="me-3">{{ total|floatformat:0 }}</h6>
+    <span>{% translate 'Week' %}:</span> <h6 class="me-3">{{ week|floatformat:0 }}</h6>
+    <span>{% translate 'Per week' %}:</span> <h6>{{ ratio|floatformat:1 }}</h6>
+    {% if current_gap %}<span class="ms-3">{% translate 'Last time before' %}:</span> <h6>{{ current_gap|floatformat:0 }}</h6><span>d.</span>{% endif %}
 </div>
