--- a/project/bookkeeping/templates/bookkeeping/includes/info_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/info_table.html
@@ -1,4 +1,6 @@
-{% load table_cell %}{% load get_item %}
+{% load table_cell %}
+{% load get_item %}
+
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
