--- a/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/accounts_worth_form.html
@@ -1,2 +1,4 @@
 {% load formset %}
-{% generic_formset title='Sąskaitų vertė' update_container='accounts_worth' %}
+{% load i18n %}
+
+{% generic_formset title=_('Worth of accounts') update_container='accounts_worth' %}
