--- a/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
@@ -1,7 +1,9 @@
+{% load i18n %}
+
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
-            <th data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="<p>Nebūtinos išlaidos, kurių galima atsisakyti:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}</p>" class="text-start exception">{{ save_sum|floatformat:0 }}</th>
+            <th data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right" title="<p>{% translate 'Unnecessary expenses that can be avoided' %}:<br />{% for i in not_use %}- {{ i }}<br />{% endfor %}</p>" class="text-start exception">{{ save_sum|floatformat:0 }}</th>
             <th class="text-end">€ + F</th>
             <th class="text-end">€ + F + P</th>
         </tr>
@@ -9,7 +11,7 @@
     <tbody>
         {% for item in no_incomes %}
         <tr>
-            <td>{% if item.label == 'money' %}Pinigai, € {% endif %}{% if item.label == 'no_cut' %}Nekeičiant išlaidų, mėn{% endif %}{% if item.label == 'cut' %}Sumažinus išlaidas, mėn{% endif %}</td>
+            <td>{% if item.label == 'money' %}{% translate 'Money' %}, € {% endif %}{% if item.label == 'no_cut' %}{% translate 'No change in spending, month' %}{% endif %}{% if item.label == 'cut' %}{% translate 'After spending cuts, month' %}{% endif %}</td>
             <td>{{ item.money_fund|floatformat:1 }}</td>
             <td>{{ item.money_fund_pension|floatformat:1 }}</td>
         </tr>
@@ -17,7 +19,7 @@
     </tbody>
 </table>
 <p>
-    <b>€</b> - sąskaitose esantys pinigai<br />
-    <b>F</b> - Fondai<br />
-    <b>P</b> - Pensijų fondai
+    <b>€</b> - {% translate 'money in accounts' %}<br />
+    <b>F</b> - {% translate 'Funds/Stocks' %}<br />
+    <b>P</b> - {% translate 'Pension funds' %}
 </p>
