--- a/project/bookkeeping/templates/bookkeeping/includes/pensions_worth_form.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/pensions_worth_form.html
@@ -1,2 +1,4 @@
 {% load formset %}
-{% generic_formset title='Pensijų vertė' update_container='pension_worth' %}
+{% load i18n %}
+
+{% generic_formset title=_('Worth of pensions') update_container='pension_worth' %}
