--- a/project/bookkeeping/templates/bookkeeping/includes/worth_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/worth_table.html
@@ -1,27 +1,28 @@
 {% load table_cell %}
+{% load i18n %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
             <th colspan="4" rowspan="2">{{ title }}</th>
-            <th colspan="3" rowspan="2" class="br text-end">{% if percentage_from_incomes %} Nuo pajamų: {{ percentage_from_incomes|floatformat:1 }}%{% endif %}</th>
-            <th colspan="4" class="text-center">Pelnas/Nuostolis</th>
+            <th colspan="3" rowspan="2" class="br text-end">{% if percentage_from_incomes %} {% translate 'From incomes' %}: {{ percentage_from_incomes|floatformat:1 }}%{% endif %}</th>
+            <th colspan="4" class="text-center">{% translate 'Profit' %}/{% translate 'Loss' %}</th>
         </tr>
         <tr class="top">
-            <th colspan="2" class="text-center br_s">Pervesta</th>
-            <th colspan="2" class="text-center">Pirkta</th>
+            <th colspan="2" class="text-center br_s">{% translate 'Transferred' %}</th>
+            <th colspan="2" class="text-center">{% translate 'Purchased' %}</th>
         </tr>
         <tr>
-            <th class="text-start">Fondas</th>
-            <th>01.01 pevesta</th>
-            <th>01.01 mokesčiai</th>
-            <th>Pervesta</th>
-            <th>Mokesčiai</th>
-            <th>Pirkimo</th>
-            <th class="br">Rinkos vertė</th>
-            <th>Suma</th>
+            <th class="text-start">{% translate 'Fund' %}</th>
+            <th>{% translate '01.01 transferred' %}</th>
+            <th>{% translate '01.01 fees' %}</th>
+            <th>{% translate 'Transferred' %}</th>
+            <th>{% translate 'Fees' %}</th>
+            <th>{% translate 'Purchased' %}</th>
+            <th class="br">{% translate 'Market value' %}</th>
+            <th>{% translate 'Sum' %}</th>
             <th class="br_s">%</th>
-            <th>Suma</th>
+            <th>{% translate 'Sum' %}</th>
             <th>%</th>
         </tr>
     </thead>
@@ -44,7 +45,7 @@
     </tbody>
     <tfoot>
         <tr class="total">
-            <th class="text-start">Viso</th>
+            <th class="text-start">{% translate 'Total' %}</th>
             {% cell total_row.past_amount tag='th' %}
             {% cell total_row.past_fee tag='th' %}
             {% cell total_row.incomes tag='th' %}
